# hackterm

./: CLAUDE.md  README.md  package-lock.json  package.json
.claude/agents/: electron-pro.md
.claude/commands/: code-review.md  deps.md  electron-audit.md  electron-run.md  phase-check.md  quality.md  security-audit.md
.github/workflows/: build-binaries.yaml
src/: _boot.js  _renderer.js  package-lock.json  package.json  preload.js  ui.html
src/classes/: alertManager.class.js  cpuinfo.class.js  filesystem.class.js  netstat.class.js  ramwatcher.class.js  splitPane.class.js  sshTerminal.class.js  terminal.class.js  updateChecker.class.js
tauri/: package-lock.json  package.json  tsconfig.json
tauri/src/: app.d.ts  app.html
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: filesystem.rs  lib.rs  network.rs  settings.rs  ssh.rs  sysinfo.rs  terminal.rs
tauri/src/assets/css/: main.css
tauri/src/lib/components/: AlertManager.svelte  AudioFx.svelte  BootScreen.svelte  Clock.svelte  ConnInfo.svelte  CpuInfo.svelte  DocReader.svelte  Filesystem.svelte  FuzzyFinder.svelte  HardwareInspector.svelte  Keyboard.svelte  LocationGlobe.svelte  MediaPlayer.svelte  Modal.svelte  NetStat.svelte  RamWatcher.svelte  SettingsPanel.svelte  SplitPane.svelte  SshDialog.svelte  SshTerminal.svelte  SysInfo.svelte  Terminal.svelte  TopList.svelte  UpdateChecker.svelte
tauri/src/lib/stores/: settings.ts  sysinfo.ts  terminals.ts  theme.ts
tauri/src/routes/: +page.svelte
tauri/static/assets/css/: filesystem.css  (+6 more)
