[package]
name = "edex-ui"
version = "2.3.0"
description = "eDEX-UI – Tauri rewrite"
authors = ["j3lly-Fish"]
edition = "2021"

[lib]
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener  = "2"
tauri-plugin-fs      = "2"
tauri-plugin-shell   = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"

tokio            = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util     = "0.3"

portable-pty = "0.8"
sysinfo      = "0.32"
notify       = "6"
battery      = "0.7"

russh      = "0.44"
russh-keys = "0.44"
async-trait = "0.1"

reqwest    = { version = "0.12", features = ["json"] }
maxminddb  = "0.23"
uuid       = { version = "1", features = ["v4"] }
dirs       = "5"
